--- a/findings/2025.html
+++ b/findings/2025.html
@@ -71,6 +71,15 @@
   border: 1px solid #ffffff;
   }
 
+  .overall-grade span:first-child {
+  color: #ffffff;               /* White text for 'Overall Grade' */
+  border: 1px solid #ffffff;    /* Thin white outline */
+  padding: 3px 8px;             /* Some spacing around text */
+  border-radius: 4px;           /* Slightly rounded corners */
+  background-color: #004d00;/* Transparent background */
+  font-weight: bold;            /* Keep it strong */
+}
+
 
     /* Findings Container */
     .findings-container {
