--- a/findings/2025.html
+++ b/findings/2025.html
@@ -66,9 +66,10 @@
     }
     
     .overall-grade .grade {
-  background-color: transparent;
+  background-color: #004d00;
   color: #ffffff;
   border: 1px solid #ffffff;
+  font-weight: bold;
   }
 
   .overall-grade span:first-child {
