--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     <!-- Contact Details -->
     <div class="contact-details">
       <h3>For inquiries or interest in funding the report card project, please contact:</h3>
-      <p><strong>Aamir Raoof Memon</strong><br>
+      <p><strong>Dr. Aamir Raoof Memon</strong><br>
       Assistant Professor, Peoples University of Medical and Health Sciences for Women, Nawabshah, Sindh, Pakistan.<br>
       PhD Candidate, Victoria University, Melbourne, Australia.<br><br>
       <b>Email:</b> <a href="mailto:memon.aamir.raoof@gmail.com">memon.aamir.raoof@gmail.com</a></p>
